Updated the Galician translation.

--- a/po/wesnoth-dw/gl.po
+++ b/po/wesnoth-dw/gl.po
@@ -3,15 +3,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-08-25 12:35+0200\n"
-"PO-Revision-Date: 2012-05-22 08:57+0200\n"
-"Last-Translator: Adrián Chaves Fernández (Gallaecio) <adriyetichaves@gmail."
-"com>\n"
+"POT-Creation-Date: 2012-09-01 18:47+0200\n"
+"PO-Revision-Date: 2012-09-22 09:17+0200\n"
+"Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"com>\n"
 "adriyetichaves@gmail.com>\n"
 "com>\n"
 "com>\n"
@@ -22,7 +22,7 @@ msgstr ""
 "com>\n"
 "com>\n"
 "com>\n"
-"X-Generator: Lokalize 1.4\n"
+"X-Generator: Lokalize 1.5\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 
 #. [campaign]: id=Dead_Water
@@ -2984,22 +2984,17 @@ msgstr ""
 
 #. [message]: speaker=narrator
 #: data/campaigns/Dead_Water/scenarios/13_Epilogue.cfg:67
-#, fuzzy
-#| msgid ""
-#| "Cylanna never traveled far again, but stayed in Jotha as a respected "
-#| "elder. She remained a royal advisor, but her main work was healing the "
-#| "sick, and presiding at christenings and weddings. All this agreed with "
-#| "her disposition much better than battling undead."
 msgid ""
 "Cylanna never traveled far again, but stayed in Jotha as a respected elder. "
 "She remained a royal advisor, but her main work was healing the sick, and "
 "presiding at naming ceremonies and weddings. All this agreed with her "
 "disposition much better than battling undead."
 msgstr ""
-"Silana non volveu viaxar lonxe de Ioza, onde se converteu nunha sabia "
-"respectada. Seguiu sendo unha conselleira real, pero o seu traballo "
-"principal pasou a ser o de coidar dos enfermos, e presenciar bautizos e "
-"vodas. Moito mellor que loitar contra non mortos, sen lugar a dúbidas."
+"Silana non volveu viaxar lonxe de Ioza, onde se converteu nunha anciá "
+"respectada. Continuou coas súas funcións como conselleira real, pero o seu "
+"traballo principal pasou a ser o de coidar dos enfermos, e presenciar "
+"cerimonias de nomeado e casamentos. Moito mellor que loitar contra non "
+"mortos, sen lugar a dúbidas."
 
 #. [message]: speaker=narrator
 #: data/campaigns/Dead_Water/scenarios/13_Epilogue.cfg:74
@@ -3366,17 +3361,12 @@ msgstr "atorda"
 
 #. [damage]: id=tail_stun
 #: data/campaigns/Dead_Water/utils/specials.cfg:10
-#, fuzzy
-#| msgid ""
-#| "This attack hits so hard that the defender is dazed and can no longer "
-#| "enforce a zone of control. The effect wears off on the defender’s next "
-#| "turn."
 msgid ""
 "This attack hits so hard that the opponent is dazed and can no longer "
 "enforce a zone of control. The effect wears off on the opponent’s next turn."
 msgstr ""
 "Este ataque é tan forte que o defensor perde a consciencia e no pode manter "
-"a súa zona de control. O efecto pásase na seguinte quenda do defensor."
+"a súa zona de control. O efecto pásase na seguinte quenda do opoñente."
 
 #~ msgid "You receive 200 gold."
 #~ msgstr "Recibes 200 moedas de ouro."
