--- a/po/wesnoth-httt/gl.po
+++ b/po/wesnoth-httt/gl.po
@@ -4,15 +4,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: wesnoth-httt\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-08-25 12:35+0200\n"
-"PO-Revision-Date: 2012-05-22 09:56+0200\n"
-"Last-Translator: Adrián Chaves Fernández (Gallaecio) <adriyetichaves@gmail."
-"com>\n"
+"POT-Creation-Date: 2012-09-01 18:47+0200\n"
+"PO-Revision-Date: 2012-09-22 12:17+0200\n"
+"Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"com>\n"
 "adriyetichaves@gmail.com>\n"
 "adriyetichaves@gmail.com>\n"
 "adriyetichaves@gmail.com>\n"
@@ -31,7 +31,7 @@ msgstr ""
 "com>\n"
 "com>\n"
 "com>\n"
-"X-Generator: Lokalize 1.4\n"
+"X-Generator: Lokalize 1.5\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 
 #. [campaign]: id=Heir_To_The_Throne
@@ -6967,10 +6967,6 @@ msgstr ""
 
 #. [message]: speaker=Parandra
 #: data/campaigns/Heir_To_The_Throne/scenarios/21_Elven_Council.cfg:155
-#, fuzzy
-#| msgid ""
-#| "Princess, when Delfador the Great speaks of the Queen Mother, Asheviere, "
-#| "ordering the princes of Wesnoth to be put to death, he speaks the truth."
 msgid ""
 "Princess, when Delfador the Great speaks of the Queen Dowager, Asheviere, "
 "ordering the princes of Wesnoth to be put to death, he speaks the truth."
@@ -6998,12 +6994,6 @@ msgstr ""
 
 #. [message]: speaker=Li'sar
 #: data/campaigns/Heir_To_The_Throne/scenarios/21_Elven_Council.cfg:173
-#, fuzzy
-#| msgid ""
-#| "Well, that is why I must take the Sceptre. I will return, and people will "
-#| "accept me as Queen. I will rule justly and fairly. My mother is only "
-#| "Queen Mother. The throne is rightfully mine, and with the Sceptre I can "
-#| "prove it."
 msgid ""
 "Well, that is why I must take the Sceptre. I will return, and people will "
 "accept me as Queen. I will rule justly and fairly. My mother is only Queen "
@@ -7011,7 +7001,8 @@ msgid ""
 msgstr ""
 "Entón entenderedes por que teño que levar o cetro. Cando volva, o pobo "
 "aceptarame como raíña, e poderei reinar con xustiza. Miña nai non é máis que "
-"a rexente, o trono perténceme por dereito, e co cetro poderei demostralo."
+"a viúva do rei, o trono perténceme por dereito, e co cetro poderei "
+"demostralo."
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Heir_To_The_Throne/scenarios/21_Elven_Council.cfg:177
@@ -7024,12 +7015,6 @@ msgstr ""
 
 #. [message]: speaker=Li'sar
 #: data/campaigns/Heir_To_The_Throne/scenarios/21_Elven_Council.cfg:183
-#, fuzzy
-#| msgid ""
-#| "Well, I have the Sceptre! I will return and the people will accept me as "
-#| "Queen! My mother is only Queen Mother. The Throne is rightfully mine, and "
-#| "I will rule from it with justice and fairness. I may even accept you as "
-#| "my adviser and counselor, Delfador."
 msgid ""
 "Well, I have the Sceptre! I will return and the people will accept me as "
 "Queen! My mother is only Queen Dowager. The Throne is rightfully mine, and I "
@@ -7037,8 +7022,8 @@ msgid ""
 "adviser and counselor, Delfador."
 msgstr ""
 "Entón con máis razón debo volver ao reino co cetro. O pobo aceptarame como "
-"raíña.! Miña nai non é máis que a rexente. O trono perténceme por lexítimo "
-"dereito, e reinarei con xustiza. E Delfador, ti poderías ser o meu "
+"raíña.! Miña nai non é máis que a viúva do rei. O trono perténceme por "
+"lexítimo dereito, e reinarei con xustiza. E Delfador, ti poderías ser o meu "
 "conselleiro real."
 
 #. [message]: speaker=Delfador
@@ -8253,17 +8238,12 @@ msgstr "Raíña das tebras"
 
 #. [unit_type]: id=Dark Queen, race=human
 #: data/campaigns/Heir_To_The_Throne/units/Dark_Queen.cfg:19
-#, fuzzy
-#| msgid ""
-#| "The evil queen mother Asheviere has terrorized Wesnoth for many years. "
-#| "Her knowledge of magic makes her a worthy foe in combat, although her "
-#| "power is mostly derived from those she commands."
 msgid ""
 "The evil queen Asheviere has terrorized Wesnoth for many years. Her "
 "knowledge of magic makes her a worthy foe in combat, although her power is "
 "mostly derived from those she commands."
 msgstr ""
-"A malvada rexente Axevier leva varios anos aterrorizando o Noroeste. O seu "
+"A malvada raíña Axevier leva varios anos aterrorizando o Noroeste. O seu "
 "coñecemento da maxia convértea nun perigoso inimigo en combate, aínda que o "
 "seu poder derívase en gran parte daqueles aos que lidera."
 
