--- a/po/wesnoth-sotbe/gl.po
+++ b/po/wesnoth-sotbe/gl.po
@@ -9,18 +9,18 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-08-18 09:41+0200\n"
-"PO-Revision-Date: 2012-05-22 09:18+0200\n"
-"Last-Translator: Adrián Chaves Fernández (Gallaecio) <adriyetichaves@gmail."
-"com>\n"
+"POT-Creation-Date: 2012-09-01 18:47+0200\n"
+"PO-Revision-Date: 2012-09-22 12:25+0200\n"
+"Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"com>\n"
 "adriyetichaves@gmail.com>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Lokalize 1.4\n"
+"X-Generator: Lokalize 1.5\n"
 
 #. [campaign]: id=Son_of_the_Black-Eye
 #: data/campaigns/Son_Of_The_Black_Eye/_main.cfg:9
@@ -2248,26 +2248,22 @@ msgstr "Xa está todo aclarado, entón. Rapaces, temos que destruír o enclave."
 #. [message]: speaker=Kapou'e
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/08_Silent_Forest.cfg:289
 msgid "As for this weakling, I’ll personally behead her."
-msgstr ""
+msgstr "No que respecta a esta fodeárbores, eu mesmo a decapitarei."
 
 #. [message]: speaker=Kapou'e
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/08_Silent_Forest.cfg:296
 msgid "As for this weakling, I’ll personally behead him."
-msgstr ""
+msgstr "No que respecta a este fodeárbores, eu mesmo o decapitarei."
 
 #. [message]: speaker=second_unit
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/08_Silent_Forest.cfg:312
-#, fuzzy
-#| msgid "With pleasure. But what should I do with this weakling?"
 msgid "female^With pleasure. But what should I do with this weakling?"
-msgstr "Será un pracer. Pero que facemos con este?"
+msgstr "Será un pracer. Pero que facemos con esta?"
 
 #. [message]: speaker=Kapou'e
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/08_Silent_Forest.cfg:317
-#, fuzzy
-#| msgid "Behead it."
 msgid "Behead her."
-msgstr "Decapítao."
+msgstr "Decapítaa."
 
 #. [message]: speaker=second_unit
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/08_Silent_Forest.cfg:324
@@ -2276,8 +2272,6 @@ msgstr "Será un pracer. Pero que facemos con este?"
 
 #. [message]: speaker=Kapou'e
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/08_Silent_Forest.cfg:329
-#, fuzzy
-#| msgid "Behead it."
 msgid "Behead him."
 msgstr "Decapítao."
 
@@ -2687,8 +2681,6 @@ msgstr "Gru, afástate desa cousa! Necesítote con vida!"
 
 #. [message]: speaker=Grüü
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/10_Saving_Inarix.cfg:363
-#, fuzzy
-#| msgid "Uh... OK, Chief!"
 msgid "Uh... Fine, Chief!"
 msgstr "Ah… A mandar, xefe!"
 
