--- a/po/wesnoth-thot/gl.po
+++ b/po/wesnoth-thot/gl.po
@@ -10,21 +10,21 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-08-18 09:41+0200\n"
-"PO-Revision-Date: 2012-05-22 09:25+0200\n"
-"Last-Translator: Adrián Chaves Fernández (Gallaecio) <adriyetichaves@gmail."
-"com>\n"
+"POT-Creation-Date: 2012-09-01 18:47+0200\n"
+"PO-Revision-Date: 2012-09-22 12:27+0200\n"
+"Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"com>\n"
 "adriyetichaves@gmail.com>\n"
 "adriyetichaves@gmail.com>\n"
 "adriyetichaves@gmail.com>\n"
 "adriyetichaves@gmail.com>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Lokalize 1.4\n"
+"X-Generator: Lokalize 1.5\n"
 
 #. [campaign]: id=The_Hammer_of_Thursagan
 #: data/campaigns/The_Hammer_of_Thursagan/_main.cfg:10
@@ -1110,12 +1110,6 @@ msgstr "Non deixedes que os dos machados se acheguen aos niños. Atacade!"
 
 #. [message]: speaker=Master Perrin
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/07_Mages_and_Drakes.cfg:182
-#, fuzzy
-#| msgid ""
-#| "We’re grateful for your assistance. And I’d like to send at least one of "
-#| "our senior apprentices with you to the east. It has come time for them to "
-#| "be journeymen... and I sense something being born to the east that I do "
-#| "not like the feel of."
 msgid ""
 "We’re grateful for your assistance. And I’d like to send a couple of our "
 "senior apprentices with you to the east. It has come time for them to be "
@@ -1123,28 +1117,22 @@ msgid ""
 "like the feel of."
 msgstr ""
 "Estámosvos agradecidos pola vosa axuda. Permitide polo menos que algúns dos "
-"nosos aprendices máis veteranos vos acompañe. Para eles será toda unha "
-"experiencia, coñecer mundo e iso. Ademais, sinto que algo moi perigoso nace "
-"no leste. Un pouco de axuda non vos estará de máis."
+"nosos aprendices máis veteranos vos acompañe ao leste. É hora de que "
+"marchen, de que vaian coñecer mundo. Ademais, sinto que algo moi perigoso "
+"nace no leste. Un pouco de axuda non vos estará de máis."
 
 #. [message]: speaker=Master Perrin
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/07_Mages_and_Drakes.cfg:187
-#, fuzzy
-#| msgid ""
-#| "We’re grateful for your assistance. And I’d like to send at least one of "
-#| "our senior apprentices with you to the east. It has come time for them to "
-#| "be journeymen... and I sense something being born to the east that I do "
-#| "not like the feel of."
 msgid ""
 "We’re grateful for your assistance. And I’d like to send one of our senior "
 "apprentices with you to the east. It has come time for him to be "
 "journeyman... and I sense something being born to the east that I do not "
 "like the feel of."
 msgstr ""
-"Estámosvos agradecidos pola vosa axuda. Permitide polo menos que algúns dos "
-"nosos aprendices máis veteranos vos acompañe. Para eles será toda unha "
-"experiencia, coñecer mundo e iso. Ademais, sinto que algo moi perigoso nace "
-"no leste. Un pouco de axuda non vos estará de máis."
+"Estámosvos agradecidos pola vosa axuda. Permitide polo menos que un dos "
+"nosos aprendices máis veteranos vos acompañe ao leste. É hora de que marche, "
+"de que vaia coñecer mundo. Ademais, sinto que algo moi perigoso nace no "
+"leste. Un pouco de axuda non vos estará de máis."
 
 #. [message]: speaker=Aiglondur
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/07_Mages_and_Drakes.cfg:193
