--- a/po/wesnoth-trow/gl.po
+++ b/po/wesnoth-trow/gl.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-08-25 12:35+0200\n"
-"PO-Revision-Date: 2012-07-08 03:42+0200\n"
+"POT-Creation-Date: 2012-09-01 18:47+0200\n"
+"PO-Revision-Date: 2012-09-22 12:30+0200\n"
 "Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
@@ -33,7 +33,7 @@ msgstr ""
 "adriyetichaves@gmail.com>\n"
 "adriyetichaves@gmail.com>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Lokalize 1.4\n"
+"X-Generator: Lokalize 1.5\n"
 
 #. [campaign]: id=The_Rise_of_Wesnoth
 #. [scenario]: id=22_The_Rise_of_Wesnoth
@@ -2762,16 +2762,12 @@ msgstr ""
 
 #. [message]: speaker=Prince Haldric
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/09_Fallen_Lich_Point.cfg:264
-#, fuzzy
-#| msgid ""
-#| "Okay. Let’s un-petrify that lich and take his book, then get into the "
-#| "sewers. Umm, what language would that book be in?"
 msgid ""
 "Well, let’s un-petrify that lich and take his book, then get into the "
 "sewers. Umm, what language would that book be in?"
 msgstr ""
 "Ben, despetrifiquemos ao liche e collámoslle o libro. Despois ás cloacas. "
-"Hmm… En que lingua estará escrito?"
+"Hm… En que lingua estará escrito?"
 
 #. [message]: speaker=Lady Jessene
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/09_Fallen_Lich_Point.cfg:268
@@ -4173,10 +4169,6 @@ msgstr "Un momento, achégase un barco. Moitos barcos… Invádennos!"
 
 #. [message]: speaker=Dursil
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/15_A_New_Land.cfg:137
-#, fuzzy
-#| msgid ""
-#| "Umm, we’re being invaded? Okay, we’ll sort out our differences later. "
-#| "Let’s get them first."
 msgid ""
 "Umm, we’re being invaded? Fine, we’ll sort out our differences later. Let’s "
 "get them first."
@@ -6978,14 +6970,6 @@ msgstr "Dama dos occidentais"
 #. [unit_type]: id=Wesfolk Leader, race=human
 #: data/campaigns/The_Rise_Of_Wesnoth/units/Wesfolk_Lady.cfg:22
 #: data/campaigns/The_Rise_Of_Wesnoth/units/Wesfolk_Leader.cfg:23
-#, fuzzy
-#| msgid ""
-#| "Born in the Wesfolk aristocracy, she and her people were excluded from "
-#| "society by their lords, who betrayed their loyalty when a war against "
-#| "Haldric’s people was being lost. This outcast still conserves her "
-#| "nobleness in her veins and in the battlefield she has earned valuable "
-#| "experience, which continues increasing with time, as does her natural "
-#| "leadership."
 msgid ""
 "Born in the Wesfolk aristocracy, she and her people were excluded from "
 "society by their lords, who betrayed their loyalty when a war against "
@@ -6994,10 +6978,10 @@ msgid ""
 "which continues increasing with time, as does her natural leadership."
 msgstr ""
 "Nacida de entre a aristocracia occidental, foi excluída xusto co seu pobo da "
-"sociedade polos seus señores, que traizoaron a súa lealdade cando a guerra "
-"contra o pobo de Haldric pintaba mal. Esta fuxitiva conserva a nobreza no "
-"sangue, e ten moita experiencia no campo de batalla, experiencia que irá en "
-"aumento, igual que a súa capacidade natural para o liderado."
+"sociedade polos seus señores, que traizoaron a súa lealdade cando se viron a "
+"piques de perder a guerra contra o pobo de Haldric. Esta fuxitiva conserva a "
+"nobreza no sangue, e ten moita experiencia no campo de batalla, experiencia "
+"que irá en aumento, igual que a súa capacidade natural para o liderado."
 
 # bastón FIXADO
 #. [attack]: type=impact
@@ -7029,14 +7013,6 @@ msgstr "Paria dos occidentais"
 
 #. [unit_type]: id=Wesfolk Outcast, race=human
 #: data/campaigns/The_Rise_Of_Wesnoth/units/Wesfolk_Outcast.cfg:22
-#, fuzzy
-#| msgid ""
-#| "Born in the Wesfolk aristocracy, she and her people were excluded from "
-#| "society by their lords, who betrayed their loyalty when a war against "
-#| "Haldric’s people was being lost. This outcast still conserves her "
-#| "nobleness in her veins and in the battlefield she has earned valuable "
-#| "experience, which she can lend to her people for turning a fight in their "
-#| "favor."
 msgid ""
 "Born in the Wesfolk aristocracy, she and her people were excluded from "
 "society by their lords, who betrayed their loyalty when a war against "
@@ -7045,10 +7021,10 @@ msgid ""
 "which she can lend to her people for turning a fight in their favor."
 msgstr ""
 "Nacida de entre a aristocracia occidental, foi excluída xusto co seu pobo da "
-"sociedade polos seus señores, que traizoaron a súa lealdade cando a guerra "
-"contra o pobo de Haldric pintaba mal. Esta fuxitiva conserva a nobreza no "
-"sangue, e ten moita experiencia no campo de batalla, que pode pasar aos seus "
-"para dárlle un xiro ao combate no seu favor."
+"sociedade polos seus señores, que traizoaron a súa lealdade cando se viron a "
+"piques de perder a guerra contra o pobo de Haldric. Esta fuxitiva conserva a "
+"nobreza no sangue, e ten moita experiencia no campo de batalla, que pode "
+"pasar aos seus para darlle un xiro ao combate no seu favor."
 
 # wose novo FIXADO
 #. [unit_type]: id=Wose Sapling, race=wose
