--- a/po/wesnoth-tsg/gl.po
+++ b/po/wesnoth-tsg/gl.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-08-18 09:41+0200\n"
-"PO-Revision-Date: 2012-07-08 03:43+0200\n"
+"PO-Revision-Date: 2012-09-22 12:34+0200\n"
 "Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
@@ -24,7 +24,7 @@ msgstr ""
 "adriyetichaves@gmail.com>\n"
 "adriyetichaves@gmail.com>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Lokalize 1.4\n"
+"X-Generator: Lokalize 1.5\n"
 
 #. [campaign]: id=The_South_Guard
 #: data/campaigns/The_South_Guard/_main.cfg:9
@@ -934,7 +934,7 @@ msgid ""
 msgstr ""
 "Xusto antes de que comezasen as incursións dos bandidos, un embaixador dos "
 "elfos do Bosque do Edén viu a ver ao señor Loris. Solicitou que un cabaleiro "
-"o acompañase ao bosque para discutir unha nova amenaza para o reino."
+"o acompañase ao bosque para discutir unha nova ameaza para o reino."
 
 #. [message]: speaker=Deoran
 #: data/campaigns/The_South_Guard/scenarios/02_Proven_by_the_Sword.cfg:589
@@ -1663,7 +1663,7 @@ msgstr ""
 #: data/campaigns/The_South_Guard/scenarios/05_Choice_In_The_Fog.cfg:377
 #: data/campaigns/The_South_Guard/scenarios/05_Choice_In_The_Fog.cfg:411
 msgid "We found the lich!"
-msgstr ""
+msgstr "Atopamos ao liche!"
 
 #. [message]: speaker=second_unit
 #: data/campaigns/The_South_Guard/scenarios/05_Choice_In_The_Fog.cfg:458
@@ -1767,9 +1767,9 @@ msgid ""
 "My lord, they could be valuable allies, and the undead are a greater threat "
 "to our lands. Justice can wait until we are all safely in Westin."
 msgstr ""
-"Señor, poderían ser valiosos como aliados, e supoñen unha amenaza moito "
-"menor que a dos non mortos para as nosas terras. A xustiza pode agardar ata "
-"que esteamos a salvo en Norestin."
+"Señor, poderían ser valiosos como aliados, e supoñen unha ameaza moito menor "
+"que a dos non mortos para as nosas terras. A xustiza pode agardar ata que "
+"esteamos a salvo en Norestin."
 
 #. [message]: speaker=Ethiliel
 #: data/campaigns/The_South_Guard/scenarios/05_Choice_In_The_Fog.cfg:546
@@ -1976,17 +1976,17 @@ msgid ""
 "pray our only chance at victory was not lost today."
 msgstr ""
 "Entón volveremos a Norestin e prepararémonos para a batalla. Espero que a de "
-"hoxe non fose a nosa única oportunidade de acabar coa amenaza."
+"hoxe non fose a nosa única oportunidade de acabar coa ameaza."
 
 #. [message]: speaker=Sir Gerrick
 #: data/campaigns/The_South_Guard/scenarios/05_Choice_In_The_Fog.cfg:891
 msgid "Now, on with those bandits!"
-msgstr ""
+msgstr "Agora, a por eses bandidos!"
 
 #. [message]: speaker=Sir Gerrick
 #: data/campaigns/The_South_Guard/scenarios/05_Choice_In_The_Fog.cfg:909
 msgid "We have beaten them both, criminals and undead!"
-msgstr "Acabamos coas dúas amenazas, cos criminais e cos non mortos!"
+msgstr "Acabamos coas dúas ameazas, cos criminais e cos non mortos!"
 
 #. [message]: speaker=Deoran
 #: data/campaigns/The_South_Guard/scenarios/05_Choice_In_The_Fog.cfg:914
@@ -2147,10 +2147,9 @@ msgid ""
 "and Deoran."
 msgstr ""
 "Señor Guerin, debe chegar a Querla e advertir á súa xente do perigo que "
-"amenaza polo sur. Guiarémolo polo bosque, e acabaremos con calquera "
-"obstáculo do camiño. Pode escoller algúns dos seus veteranso para que o "
-"acompañen tamén, e os que deixe atrás terán tempo de volver onda Ediliel e "
-"Déoran."
+"ameaza polo sur. Guiarémolo polo bosque, e acabaremos con calquera obstáculo "
+"do camiño. Pode escoller algúns dos seus veteranos para que o acompañen "
+"tamén, e os que deixe atrás terán tempo de volver onda Ediliel e Déoran."
 
 #. [message]: speaker=Sir Gerrick
 #: data/campaigns/The_South_Guard/scenarios/06a_Tidings_Good_and_Ill.cfg:207
@@ -2334,7 +2333,7 @@ msgid ""
 "While the council debated the best course of action, Deoran and Ethiliel "
 "prepared to enter the caves under Mebrin’s fortress..."
 msgstr ""
-"Mentres o consello decidía como actuar ante a amenaza dos non mortos, Déoran "
+"Mentres o consello decidía como actuar ante a ameaza dos non mortos, Déoran "
 "e Ediliel preparábanse para entrar nas covas baixo a fortaleza de Mebrin…"
 
 #. [scenario]: id=06b_The_Long_March
@@ -2705,7 +2704,7 @@ msgstr "Ha! Quen quere as estúpidas terras dos humanos?!"
 #. [message]: speaker=Minister Hylas
 #: data/campaigns/The_South_Guard/scenarios/07a_Into_the_Depths.cfg:493
 msgid "Then you will not aid us in our quest to destroy the undead menace?"
-msgstr "Entón non nos axudarás a destruír a amenaza dos non mortos?"
+msgstr "Entón non nos axudarás a destruír a ameaza dos non mortos?"
 
 #. [message]: speaker=Grek
 #: data/campaigns/The_South_Guard/scenarios/07a_Into_the_Depths.cfg:498
@@ -3996,9 +3995,9 @@ msgid ""
 "every commander would be needed to weather the storm..."
 msgstr ""
 "O señor Déoran, cabaleiro do Noroeste, foi chamado a Güedin para asistir a "
-"un consello presidido polo mesmísimo rei Haldric. Nubes de tormenta "
-"amenazaban o reino, e necesitaríase de todo comandante capaz para facerlle "
-"fronte á tormenta…"
+"un consello presidido polo mesmo rei Haldric. Nubes de tormenta ameazaban o "
+"reino, e necesitaríase de todo comandante capaz para facerlle fronte á "
+"tormenta…"
 
 #. [part]
 #: data/campaigns/The_South_Guard/utils/sg_story.cfg:143
@@ -4026,7 +4025,7 @@ msgid ""
 msgstr ""
 "Exhausto, Déoran deixou caer a súa lanza. Os soldados quitaron un a un os "
 "cascos. Os lamentos dos feridos non deixaban escoitar o vento do distante "
-"norte. A amenaza dos non mortos rematara."
+"norte. A ameaza dos non mortos rematara."
 
 #. [part]
 #: data/campaigns/The_South_Guard/utils/sg_story.cfg:154
@@ -4087,9 +4086,9 @@ msgid ""
 "every commander would be needed to weather the onslaught..."
 msgstr ""
 "O señor Déoran, cabaleiro do Noroeste, foi chamado a Güedin para asistir a "
-"un consello presidido polo mesmísimo rei Haldric. Nubes de tormenta "
-"amenazaban o reino, e necesitaríase de todo comandante capaz para facerlle "
-"fronte á tormenta…"
+"un consello presidido polo mesmo rei Haldric. Nubes de tormenta ameazaban o "
+"reino, e necesitaríase de todo comandante capaz para facerlle fronte á "
+"tormenta…"
 
 #~ msgid "Time runs out"
 #~ msgstr "Esgotar os turnos"
