--- a/po/wesnoth-help/gl.po
+++ b/po/wesnoth-help/gl.po
@@ -15,15 +15,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-08-25 12:35+0200\n"
-"PO-Revision-Date: 2012-05-22 09:45+0200\n"
-"Last-Translator: Adrián Chaves Fernández (Gallaecio) <adriyetichaves@gmail."
-"com>\n"
+"POT-Creation-Date: 2012-09-01 18:47+0200\n"
+"PO-Revision-Date: 2012-09-22 09:02+0200\n"
+"Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: gl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"com>\n"
 "adriyetichaves@gmail.com>\n"
 "adriyetichaves@gmail.com>\n"
 "adriyetichaves@gmail.com>\n"
@@ -39,7 +39,7 @@ msgstr ""
 "com>\n"
 "com>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Lokalize 1.4\n"
+"X-Generator: Lokalize 1.5\n"
 
 #. [time]: id=underground
 #: data/campaigns/Heir_To_The_Throne/utils/httt_utils.cfg:529
@@ -1194,7 +1194,7 @@ msgstr "Tipos de terreo"
 #. [topic]: id=..addons
 #: data/core/help.cfg:70 data/core/help.cfg:793
 msgid "Add-ons"
-msgstr ""
+msgstr "Complementos"
 
 #. [section]: id=commands
 #. [topic]: id=..commands
@@ -1212,15 +1212,16 @@ msgid ""
 "its statistics, attacks, resistances, and movement and defense values.\n"
 "\n"
 msgstr ""
+"Este apartado listará as unidades que descubras a medida que explores o "
+"mundo do Noroeste. Cada vez que vexas unha nova unidade durante unha campaña "
+"ou un escenario para varios xogadores, engadirase á sección da súa especie. "
+"Entón, poderás ver a súa páxina en calquera momento. A páxina de cada "
+"unidade contará cunha descrición xeral, as súas estatísticas, ataques, "
+"resistencias, así como os valores de movemento e defensa.\n"
+"\n"
 
 #. [topic]: id=..abilities_section
 #: data/core/help.cfg:100
-#, fuzzy
-#| msgid ""
-#| "Certain units have abilities that either directly affect other units, or "
-#| "have an impact on how the unit interacts with other units. These "
-#| "abilities will be listed under this topic as you encounter them.\n"
-#| "\n"
 msgid ""
 "Certain units have abilities that either directly affect other units or have "
 "an impact on how the unit interacts with other units. These abilities will "
@@ -1230,9 +1231,10 @@ msgid ""
 "\n"
 msgstr ""
 "Certas unidades teñen habilidades que afectan directamente a outras unidades "
-"ou teñen un impacto no xeito en que a unidade se relaciona con outras "
-"unidades. Estas habilidades listaranse neste apartado a medida que as vaias "
-"descubrindo. \n"
+"ou teñen un impacto no xeito en que a unidade se relaciona con outras. Estas "
+"habilidades listaranse neste apartado a medida que as vaias descubrindo. En "
+"cada páxina poderás acceder á descrición da habilidade e á lista de unidades "
+"descubertas que a posúen.\n"
 "\n"
 
 #. [topic]: id=..weapon_specials
@@ -1245,6 +1247,12 @@ msgid ""
 "weapon special does and which (currently discovered) units have it.\n"
 "\n"
 msgstr ""
+"Algúns ataques contan con propiedades que aumentan a súa efectividade. Cando "
+"vexas unha nova propiedade durante unha campaña ou un escenario para varios "
+"xogadores, esta engadirase á lista. Entón poderás acceder á súa páxina en "
+"calquera momento. A páxina de cada propiedade conta cunha descrición e unha "
+"lista das unidades descubertas que a teñen.\n"
+"\n"
 
 #. [topic]: id=.unknown_unit
 #: data/core/help.cfg:118
@@ -1314,7 +1322,7 @@ msgstr ""
 "Para comezar o mellor é premer o botón de <bold>text='Aprendizaxe'</bold> do "
 "menú principal. Iniciará entón a aprendizaxe interactiva, onde se che "
 "ensinarán os aspectos básicos do xogo. Despois recoméndase xogar a campaña "
-"“O herdeiro ao trono” —preme <bold>text='Campaña'</bold> e logo escolle "
+"“O herdeiro ao trono” —preme <bold>text='Un xogador'</bold> e logo escolle "
 "<italic>text='O herdeiro ao trono'</italic>—. Dado que <italic>text='A "
 "batalla polo Noroeste'</italic> pode resultar un pouco difícil, quizais "
 "prefiras comezar no nivel fácil."
@@ -3520,19 +3528,19 @@ msgid ""
 "offer.\n"
 "\n"
 msgstr ""
+"A batalla polo Noroeste pode estenderse con contido desenvolvido pola súa "
+"activa comunidade de usuarios, que fai uso de todo o potencial do motor do "
+"xogo para fornecer novos escenarios, campañas, e moito máis do que ofrece o "
+"contido oficial.\n"
+"\n"
 
 #. [topic]: id=using_addons
 #: data/core/help.cfg:804
 msgid "Using Add-ons"
-msgstr ""
+msgstr "Uso de complementos"
 
 #. [topic]: id=using_addons
 #: data/core/help.cfg:805
-#, fuzzy
-#| msgid ""
-#| "\n"
-#| "\n"
-#| "<header>text=Damage</header>"
 msgid ""
 "\n"
 "\n"
@@ -3540,7 +3548,7 @@ msgid ""
 msgstr ""
 "\n"
 "\n"
-"<header>text=Dano</header>"
+"<header>text='Campañas e escenarios'</header>"
 
 #. [topic]: id=using_addons
 #: data/core/help.cfg:805
@@ -3548,6 +3556,8 @@ msgid ""
 "The game supports various types of add-ons that are used differently "
 "according to their purpose."
 msgstr ""
+"O xogo permite o uso de varios tipos de complementos que se integran en A "
+"batalla polo Noroeste de xeito distinto segundo o seu propósito."
 
 #. [topic]: id=using_addons
 #: data/core/help.cfg:807
@@ -3559,16 +3569,23 @@ msgid ""
 "and regular campaigns are available from the <italic>text='Campaigns'</"
 "italic> menu in the title screen."
 msgstr ""
+"\n"
+"\n"
+"As campañas individuais son coleccións de escenarios xuntadas para narrar "
+"unha historia. Podes acceder tanto aos escenarios individuais —se están "
+"pensados para xogarse así— como ás campañas normais desde o menú principal, "
+"premendo o botón <italic>text='Un xogador'</italic>."
 
 #. [topic]: id=using_addons
 #: data/core/help.cfg:809
-#, fuzzy
-#| msgid "<header>text='Units having this special attack'</header>"
 msgid ""
 "\n"
 "\n"
 "<header>text='Multiplayer Campaigns, Scenarios, and Map Packs'</header>"
-msgstr "<header>text='Unidades que teñen este ataque especial'</header>"
+msgstr ""
+"\n"
+"\n"
+"<header>text='Campañas, escenarios e mapas para varios xogadores'</header>"
 
 #. [topic]: id=using_addons
 #: data/core/help.cfg:811
@@ -3580,14 +3597,15 @@ msgid ""
 "packs providing sets of individual multiplayer scenarios not connected in "
 "the form of a campaign."
 msgstr ""
+"\n"
+"\n"
+"As partidas para <italic>text='varios xogadores'</italic> poden ter lugar en "
+"escenarios completamente personalizados, ou campañas especialmente deseñadas "
+"para varios xogadores. Existen ademais paquetes con grupos de escenarios "
+"para varios xogadores, que non están conectados entre eles a modo de campaña."
 
 #. [topic]: id=using_addons
 #: data/core/help.cfg:813
-#, fuzzy
-#| msgid ""
-#| "\n"
-#| "\n"
-#| "<header>text='Order and Number of Strikes'</header>"
 msgid ""
 "\n"
 "\n"
@@ -3595,7 +3613,7 @@ msgid ""
 msgstr ""
 "\n"
 "\n"
-"<header>text='Orde e número de golpes'</header>"
+"<header>text='Eras e faccións para varios xogadores'</header>"
 
 #. [topic]: id=using_addons
 #: data/core/help.cfg:815
@@ -3611,14 +3629,19 @@ msgid ""
 "creating a new game, and players can pick from the available factions for "
 "that era when setting up their sides and teams."
 msgstr ""
+"\n"
+"\n"
+"Á hora de xogar, as distintas especies que habitan o mundo agrúpanse en "
+"faccións. As faccións xúntanse tamén en grupos equilibrados cun tema común. "
+"Por exemplo, as faccións principais do Noroeste inclúense na «Era "
+"predeterminada».\n"
+"\n"
+"No modo para <italic>text='varios xogadores'</italic>, podes escoller unha "
+"era ao crear unha partida, e os xogadores poden escoller unha das faccións "
+"dispoñíbeis nesa era ao configurar os seus bandos e equipos."
 
 #. [topic]: id=using_addons
 #: data/core/help.cfg:819
-#, fuzzy
-#| msgid ""
-#| "\n"
-#| "\n"
-#| "<header>text='Chance to Hit'</header>"
 msgid ""
 "\n"
 "\n"
@@ -3626,7 +3649,7 @@ msgid ""
 msgstr ""
 "\n"
 "\n"
-"<header>text='Probabilidade de atinar'</header>"
+"<header>text='Recursos para autores'</header>"
 
 #. [topic]: id=using_addons
 #: data/core/help.cfg:821
@@ -3639,11 +3662,19 @@ msgid ""
 "directly used in-game on their own; however, other playable add-ons may "
 "depend on them and suggest or require their installation during download."
 msgstr ""
+"\n"
+"\n"
+"Os autores de contidos poden empregar paquetes de recursos dispoñíbeis no "
+"servidor de complementos para enriquecer os seus contidos con elementos "
+"existentes: imaxes, música e código. Normalmente estes recursos non están "
+"pensados para que os empreguen xogadores, e non poden usarse sen máis desde "
+"o xogo. Porén, outros complementos poden requirilos ou recomendar a súa "
+"instalación ao descargarse."
 
 #. [topic]: id=installing_addons
 #: data/core/help.cfg:830
 msgid "Installing Add-ons"
-msgstr ""
+msgstr "Instalación de complementos"
 
 #. [topic]: id=installing_addons
 #: data/core/help.cfg:831
@@ -3670,11 +3701,35 @@ msgid ""
 "about the add-on, such as its full description, installation status, and "
 "available languages."
 msgstr ""
+"Para descargar e actualizar complementos feitos por outros usuarios, preme o "
+"botón <italic>text='Complementos'</italic> do menú principal. Unha vez "
+"conectado ao servidor de complementos (<italic>text='add-ons.wesnoth.org'</"
+"italic>) de maneira predeterminada, obterás unha lista de complementos "
+"dispoñíbeis no servidor.\n"
+"\n"
+"O estado de instalación de cada un deles amosarase nunha columna. No caso "
+"dos complementos <italic>text='anovábeis'</italic> ou "
+"<italic>text='obsoletos'</italic> no servidor, a columna da "
+"<italic>text='Versión'</italic> indicará tanto a instalada localmente como a "
+"dispoñíbel no servidor.\n"
+"\n"
+"Para buscar complementos mediante termos de busca, escríbaos —non importa a "
+"orde— na caixa de <bold>text='FIltro'</bold>, separados por espazos. Tamén "
+"podes organizar a lista de complementos premendo as cabeceiras das columnas. "
+"Tamén é posíbel amosar unicamente os complementos pertencentes a categorías "
+"específicas: preme o botón de <bold>text='Opcións'</bold> da esquina "
+"superior dereita.\n"
+"\n"
+"Para instalar un complemento, selecciónao na lista e preme "
+"<bold>text='Aceptar'</bold>, ou fai dobre clic no seu nome. O botón de "
+"<bold>text='Descrición'</bold> fornecerá detalles adicionais sobre o "
+"complemento, como a súa descrición completa, o estado de instalación, e as "
+"linguas nas que está dispoñíbel."
 
 #. [topic]: id=removing_addons
 #: data/core/help.cfg:844
 msgid "Removing Add-ons"
-msgstr ""
+msgstr "Eliminación de complementos"
 
 #. [topic]: id=removing_addons
 #: data/core/help.cfg:845
@@ -3688,6 +3743,15 @@ msgid ""
 "accidental loss. Instead, you have to manually delete the information files "
 "or the add-ons themselves using your platform’s facilities."
 msgstr ""
+"Para eliminar complementos, preme <bold>text='Eliminar complementos'</bold> "
+"no diálogo de conexión ao servidor de complementos. Poderás eliminar "
+"calquera dos complementos que teñas instalados.\n"
+"\n"
+"Esta funcionalidade non permite eliminar complementos para os que existe "
+"información de publicación (ficheiros <italic>text='.pbl'</italic>) "
+"asociada, para así evitar a perda accidental de datos. Nestes casos, terás "
+"que eliminar de maneira manual os ficheiros de información ou os propios "
+"complementos desde fóra do xogo."
 
 #. [topic]: id=general_commands
 #: data/core/help.cfg:860
@@ -6195,7 +6259,7 @@ msgstr "Axuda"
 
 #: src/help.cpp:1152
 msgid "<header>text='Units having this special attack'</header>"
-msgstr "<header>text='Unidades que teñen este ataque especial'</header>"
+msgstr "<header>text='Unidades que teñen ataques con esta propiedade'</header>"
 
 #: src/help.cpp:1228
 msgid "<header>text='Units having this ability'</header>"
@@ -6259,11 +6323,12 @@ msgstr "Movementos: "
 
 #: src/help.cpp:1451
 msgid "Vision: "
-msgstr ""
+msgstr "Visión: "
 
+# Para detalles sobre a funcionalidade: http://forum.wesnoth.org/viewtopic.php?t=36716&p=528674
 #: src/help.cpp:1453
 msgid "Jamming: "
-msgstr ""
+msgstr "Ofuscación: "
 
 #: src/help.cpp:1454
 msgid "Cost: "
@@ -6331,11 +6396,11 @@ msgstr "Custo de movemento"
 
 #: src/help.cpp:1584
 msgid "Vision Cost"
-msgstr ""
+msgstr "Custo de visión"
 
 #: src/help.cpp:1586
 msgid "Jamming Cost"
-msgstr ""
+msgstr "Custo de ofuscamento"
 
 #: src/help.cpp:1852
 msgid "<header>text='Units of this race'</header>"
